--- a/project_team/login.html
+++ b/project_team/login.html
@@ -150,8 +150,8 @@
                 <!-- input태그들 -->
                 <div class="inputboxes">
                     <div class="alert" id="alert"><i class="fas fa-exclamation-circle"></i>&nbsp;&nbsp;접근 권한이 없습니다. 관리자에게 문의하세요</div>
-                    <input type="text" name="emp_num" class="id" placeholder="사원번호" onfocus="hideAlert()">
-                    <input type="password" name="emp_pw" class="pw" placeholder="비밀번호" onfocus="hideAlert()">
+                    <input type="text" name="emp_num" class="id" placeholder="사원번호" onfocus="hideAlert()" onkeypress="enter()">
+                    <input type="password" name="emp_pw" class="pw" placeholder="비밀번호" onfocus="hideAlert()" onkeypress="enter()">
                     <input type="button" class="submit" value="로그인" onclick="login()">
                 </div>
 
@@ -247,6 +247,13 @@
                 }
 
                 loginForm.submit();
+            }
+        }
+
+        // 엔터키로 로그인하기
+        function enter() {
+            if (window.event.keyCode == 13) {
+                login();
             }
         }
 
