페이징 추가

--- a/project_team/board_qna.html
+++ b/project_team/board_qna.html
@@ -368,7 +368,9 @@
                         </tbody>
                     </table>
                     <div class="paging"> <!--페이징 시작-->
+                        <span><a href="#"><i class="fas fa-angle-double-left"></i></a></span><span><a href="#"><i class="fas fa-angle-left"></i></a></span>
                         <span><a href="#">1</a></span><span><a href="#">2</a></span><span><a href="#">3</a></span>
+                        <span><a href="#"><i class="fas fa-angle-right"></i></a></span><span><a href="#"><i class="fas fa-angle-double-right"></i></a></span>
                     </div> <!--페이징 끝-->
                     <div class="buttons"> <!--글쓰기 버튼들 시작-->
                         <a class="write">글쓰기</a>
