--- a/project_team/board_qna.html
+++ b/project_team/board_qna.html
@@ -207,7 +207,8 @@
             line-height: 45px;
             padding-left: 10px;
         }
-        .main-left li:nth-child(2) a {
+        /*왼쪽 세부 메뉴 중 클릭시 색 변경*/
+        a.clickBtn {
             color: white;
             font-weight: bold;
             background-color: #0382c2;
@@ -222,10 +223,43 @@
         .main-right h1 { /*게시판 제목 - 공지사항*/
             color: #333;
             font-size: 18px;
+            margin-bottom: 30px;
         }
+        /*검색 box css 수정 시작*/
+
+        .search-box {
+            height: 30px;
+            background-color: #fff;
+            border-collapse: collapse;
+            border: 1px solid #ccc;
+        }
+
+        .select-kind {
+            height: 30px;
+            border: none;
+            border-right: 1px solid #ccc;
+            color: #333;
+        }
+
+        .search-box  input[type=text] {
+            height: 30px;
+            border: none;
+            padding: 0 10px;
+        }
+
+        .search-box button {
+            border: none;
+            color: #333; 
+            width: 30px;
+            height: 30px;
+            
+            cursor: pointer;
+        }
+        /*검색 box css 수정 끝*/
+        
         table.noticeTable { /*테이블*/
             width: 100%;
-            margin-top: 50px;
+            margin-top: 30px;
             border: 1px solid #ccc;
             border-collapse: collapse;
             color: #333;
@@ -254,6 +288,9 @@
         }
         .paging { /*페이징*/
             text-align: center;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
         }
         .paging span {
             width: 25px;
@@ -263,10 +300,21 @@
             border: 1px solid #ccc;
         }
         .paging a {
+            width: 100%;
+            height: 100%;
             font-size: 12px;
             line-height: 22px;/* 수직 중앙 정렬 */
             color: #333;
             display: block;
+        }
+        span.nowPage {
+            border: none;
+        }
+        a.nowPage {
+            background-color: blue;
+            color: white;
+            font-weight: 600;
+            line-height: 23px;
         }
         .buttons { /*버튼들 - 글쓰기*/
             text-align: right;
@@ -324,7 +372,7 @@
             <div class="main-section"> <!-- 메인 페이지 시작 -->
                 <section class="main-left"> <!--왼쪽 세부 메뉴 시작-->
                     <ul>
-                        <li><a href="board_notice.html" class="maxTitle">공지사항</a></li>
+                        <li><a href="board_notice.html" class="maxTitle clickBtn">공지사항</a></li>
                         <li><a href="board_qna.html" class="maxTitle">Q&A</a></li>
                         <li><a href="board_qna.html" class="maxTitle">아아아아아아아아아아아아아아아아아아</a></li>
                     </ul>
@@ -333,7 +381,25 @@
                 <div></div> <!--왼쪽 세부 메뉴 가짜 공간-->
 
                 <section class="main-right"> <!--게시판 본문 시작-->
-                    <h1><i class="far fa-file-alt"></i> Q&A - 답글기능만들예정</h1>
+                    <h1><i class="far fa-file-alt"></i> 공지사항</h1>
+
+                    <!--검색 box 추가-->
+
+                    <form action="#">
+                        <table class="search-box">
+                            <tr>
+                                <td>
+                                    <select name="select" class="select-kind">
+                                        <option value="bm_title">제목</option>
+                                        <option value="bm_writer">작성자</option>
+                                    </select>
+                                    <input type="text" placeholder="검색어를 입력하세요">
+                                    <button type="submit"><i class="fas fa-search"></i></button>
+                                </td>
+                            </tr>
+                        </table>
+                    </form>
+
                     <table class="noticeTable">
                         <colgroup> <!--테이블 컬럼 너비 조절하는 태그-->
                             <col width="5%"/>
@@ -369,7 +435,7 @@
                     </table>
                     <div class="paging"> <!--페이징 시작-->
                         <span><a href="#"><i class="fas fa-angle-double-left"></i></a></span><span><a href="#"><i class="fas fa-angle-left"></i></a></span>
-                        <span><a href="#">1</a></span><span><a href="#">2</a></span><span><a href="#">3</a></span>
+                        <span><a href="#">1</a></span><span class="nowPage"><a href="#" class="nowPage">2</a></span><span><a href="#">3</a></span>
                         <span><a href="#"><i class="fas fa-angle-right"></i></a></span><span><a href="#"><i class="fas fa-angle-double-right"></i></a></span>
                     </div> <!--페이징 끝-->
                     <div class="buttons"> <!--글쓰기 버튼들 시작-->
