--- a/project_team/board_qna_read.html
+++ b/project_team/board_qna_read.html
@@ -263,8 +263,15 @@
         a.downFile:hover {
             text-decoration: underline;
         }
+        div.fileImg {
+            max-width: 500px;
+        }
+        .fileImg img {
+            max-height: 500px;
+        }
         .buttons { /*버튼들 - 글쓰기*/
             text-align: right;
+            margin-bottom: 30px;
         }
         a.write {
             padding: 7px 15px;
@@ -277,6 +284,112 @@
         }
         a.cancel {
             background-color: #8a959b;
+        }
+
+        /* 댓글 */
+        div.replyWrap {
+            width: 100%;
+        }
+        div.replyBox { /* 댓글 작성 부분 */
+            padding: 15px;
+            background-color: #e9e9e9;
+            display: flex;
+            justify-content: space-between;
+        }
+        .replyBox textarea {
+            width: 1300px;
+            border: 1px solid #cacaca;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+        .replyBox textarea:focus {
+            outline: none;
+        }
+        .replyBox input[type='submit'] {
+            width: 90px;
+            height: 75px;
+            border: none;
+            border-radius: 5px 5px 5px 5px;
+            background-color: tomato;
+            color: white;
+            font-family: 'Noto Sans KR', sans-serif;
+            font-size: 14px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        p.replyCount { /* 댓글 개수 */
+            font-size: 14px;
+            font-weight: bold;
+            padding: 20px 0 10px 0;
+        }
+        ul.replyList { /* 댓글 목록 */
+            width: 100%;
+            background-color: #e9e9e9;
+            padding: 2px 15px 10px 15px;
+            font-size: 14px;
+        }
+        .replyList li {
+            border-bottom: 1px solid #cacaca;
+            padding-bottom: 10px;
+            margin-top: 10px;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+        }
+        .replyList img {
+            width: 50px;
+        }
+        div.replyContent {
+            width: 95%;
+            background-color: skyblue;
+            position: relative;
+	        border-radius: .2em;
+            padding: 10px;
+            color: #333;
+        }
+        div.replyContent:after { /* 댓글 말풍선 뾰족모양 */
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 35%;
+            width: 0;
+            height: 0;
+            border: 7px solid transparent;
+            border-right-color: skyblue;
+            border-left: 0;
+            margin-top: -7px;
+            margin-left: -7px;
+        }
+        .replyList li:nth-child(2n) div.replyContent { /* 짝수번째 말풍선 색깔 다르게 */
+            background-color: pink;
+        }
+        .replyList li:nth-child(2n) div.replyContent:after {
+            border-right-color: pink;
+        }
+        p.replyTop {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+            margin-bottom: 5px;
+        }
+        .replyTop span:first-child {
+            font-weight: bold;
+        }
+        .replyTop span:nth-child(2) {
+            width: 1160px;
+            color: #797979;
+        }
+        .replyTop a {
+            color: #333;
+        }
+        .replyTop a:first-child {
+            padding-right: 10px;
+            border-right: 1px solid #333;
+        }
+        .replyTop a:last-child {
+            padding-left: 5px;
+        }
+        .replyTop a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -351,16 +464,89 @@
                                 <th>첨부파일</th><td colspan="3"><a href="#" class="downFile">파일1.jpg</a> [1234KB]</td>
                             </tr>
                             <tr>
-                                <td colspan="4">sdflskdjflksjdflkjsldkfj</td>
+                                <td colspan="4">sdflskdjflksjdflkjsldkfj <div class="fileImg"><img src="logo.png" alt=""></div></td>
                             </tr>
                         </table>
     
                         <div class="buttons"> <!--글쓰기 버튼들 시작-->
-                            <a class="write">삭제</a>
+                            <a class="write">답글</a>
                             <a class="write">수정</a>
+                            <a class="write">삭제</a>
                             <a class="write cancel" onclick="history.back()">목록</a>
                         </div> <!--글쓰기 버튼들 끝-->
                     </form>
+
+                    <div class="replyWrap">
+                        <form action="#" method="post">
+                            <div class="replyBox">
+                                <input type="hidden" name="bm_num" value="">
+                                <input type="hidden" name="r_writer" value="">
+                                <textarea name="r_content"></textarea>
+                                <input type="submit" value="댓글작성">
+                            </div>
+                        </form>
+
+                        <p class="replyCount">댓글 (3)</p>
+
+                        <ul class="replyList">
+                            <li>
+                                <div><img src="user.png" alt="user"></div>
+                                <div class="replyContent">
+                                    <p class="replyTop">
+                                        <span>김철수 부장</span>
+                                        <span>2021-10-22 11:55:33</span>
+                                        <span>
+                                            <a href="#">수정</a>
+                                            <a href="#">삭제</a>
+                                        </span>
+                                    </p>
+                                    <p class="replyBottom">내용입니다ㅏㅏㅏㅏㅏㅏ</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div><img src="user.png" alt="user"></div>
+                                <div class="replyContent">
+                                    <p class="replyTop">
+                                        <span>김철수 부장</span>
+                                        <span>2021-10-22 11:55:33</span>
+                                        <span>
+                                            <a href="#">수정</a>
+                                            <a href="#">삭제</a>
+                                        </span>
+                                    </p>
+                                    <p class="replyBottom">내용입니다ㅏㅏㅏㅏㅏㅏ</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div><img src="user.png" alt="user"></div>
+                                <div class="replyContent">
+                                    <p class="replyTop">
+                                        <span>김철수 부장</span>
+                                        <span>2021-10-22 11:55:33</span>
+                                        <span>
+                                            <a href="#">수정</a>
+                                            <a href="#">삭제</a>
+                                        </span>
+                                    </p>
+                                    <p class="replyBottom">내용입니다ㅏㅏㅏㅏㅏㅏ</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div><img src="user.png" alt="user"></div>
+                                <div class="replyContent">
+                                    <p class="replyTop">
+                                        <span>김철수 부장</span>
+                                        <span>2021-10-22 11:55:33</span>
+                                        <span>
+                                            <a href="#">수정</a>
+                                            <a href="#">삭제</a>
+                                        </span>
+                                    </p>
+                                    <p class="replyBottom">내용입니다ㅏㅏㅏㅏㅏㅏ</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </section> <!--게시판 본문 끝-->
             </div> <!-- 메인 페이지 끝 -->
         </main>
