댓글 ui 약간 수정

--- a/project_team/board_qna_read.html
+++ b/project_team/board_qna_read.html
@@ -298,6 +298,7 @@
         }
         .replyBox textarea {
             width: 1300px;
+            padding: 2px 5px;
             border: 1px solid #cacaca;
             font-family: 'Noto Sans KR', sans-serif;
         }
