게시글 ui 추가

--- a/project_team/board_qna_write.html
+++ b/project_team/board_qna_write.html
@@ -358,7 +358,12 @@
                                 <th>제목</th><td><input type="text" name="bm_title" id="bmTitle"></td>
                             </tr>
                             <tr>
-                                <th>첨부파일</th><td><label for="bmFile"><i class="fas fa-paperclip"></i> 업로드할 파일 선택 (파일은 1개만 업로드 가능)</label><input type="file" name="bm_file" id="bmFile"></td>
+                                <th>첨부파일</th>
+                                <td>
+                                    기존파일 - aaaa.txt
+                                    <label for="bmFile"><i class="fas fa-paperclip"></i> 업로드할 파일 선택 (파일은 1개만 업로드 가능)</label>
+                                    <input type="file" name="bm_file" id="bmFile">
+                                </td>
                             </tr>
                             <tr>
                                 <td colspan="2" class="textAreaTd"><textarea name="bm_content" id="bmContent" rows="10"></textarea></td>
