--- a/project_team/board_qna.html
+++ b/project_team/board_qna.html
@@ -284,6 +284,9 @@
         .noticeTable td:nth-child(2) { /* 제목 컬럼 */
             text-align: left;
             padding-left: 15px;
+        }
+
+        .noticeTable td:nth-child(2) a { /* 제목 컬럼 */
             color: #0382c2;
         }
         .noticeTable td:nth-child(2):hover { /* 제목 컬럼 hover 커서 */
