인사관리 ui 수정

--- a/project_team/board_mngEmp_list.html
+++ b/project_team/board_mngEmp_list.html
@@ -706,7 +706,7 @@
                     
                 </table>
                 <div class="buttons">
-                    <input type="button" value="정보수정">
+                    <input type="button" value="정보수정" onclick="location.href='board_mngEmp_detail.html'">
                     <input type="reset" class="closePop" value="취소">
                 </div>
             </form>
