--- a/project_team/board_mngEmp_detail.html
+++ b/project_team/board_mngEmp_detail.html
@@ -483,63 +483,54 @@
                             <th>사원번호</th>
                             <td><input type="text" name="emp_num" id=""></td>
                             <th>입사일자</th>
-                            <td><input type="date" name="emp_hire" id=""></td>
+                            <td><input type="text" name="emp_hire" id=""></td>
                         </tr>
 
                         <tr>
                             <th>성명</th>
                             <td><input type="text" name="emp_name" id=""></td>
                             <th>영문성명</th>
-                            <td><input type="date" name="emp_ename" id=""></td>
+                            <td><input type="text" name="emp_ename" id=""></td>
                         </tr>
 
                         <tr>
-                            <th>성명</th>
-                            <td><input type="text" name="emp_name" id=""></td>
-                            <th>영문성명</th>
-                            <td><input type="date" name="emp_ename" id=""></td>
+                            <th>부서</th>
+                            <td><input type="text" name="" id=""></td>
+                            <th>직위</th>
+                            <td><input type="text" name="" id=""></td>
                         </tr>
 
                         <tr>
-                            <th>성명</th>
-                            <td><input type="text" name="emp_name" id=""></td>
-                            <th>영문성명</th>
-                            <td><input type="date" name="emp_ename" id=""></td>
+                            <th>성별</th>
+                            <td><input type="text" name="" id=""></td>
+                            <th>생년월일</th>
+                            <td><input type="text" name="" id=""></td>
                         </tr>
 
                         <tr>
-                            <th>성명</th>
-                            <td><input type="text" name="emp_name" id=""></td>
-                            <th>영문성명</th>
-                            <td><input type="date" name="emp_ename" id=""></td>
+                            <th>연락처</th>
+                            <td><input type="text" name="" id=""></td>
+                            <th>이메일</th>
+                            <td><input type="text" name="" id=""></td>
                         </tr>
 
                         <tr>
-                            <th>성명</th>
-                            <td><input type="text" name="emp_name" id=""></td>
-                            <th>영문성명</th>
-                            <td><input type="date" name="emp_ename" id=""></td>
+                            <th>우편번호</th>
+                            <td colspan="3"><input type="text" name="" id=""></td>
                         </tr>
 
                         <tr>
-                            <th>성명</th>
-                            <td><input type="text" name="emp_name" id=""></td>
-                            <th>영문성명</th>
-                            <td><input type="date" name="emp_ename" id=""></td>
+                            <th>주소</th>
+                            <td><input type="text" name="" id=""></td>
+                            <th>상세주소/참고항목</th>
+                            <td><input type="text" name="" id=""><input type="text"></td>
                         </tr>
 
                         <tr>
-                            <th>성명</th>
-                            <td><input type="text" name="emp_name" id=""></td>
-                            <th>영문성명</th>
-                            <td><input type="date" name="emp_ename" id=""></td>
-                        </tr>
-
-                        <tr>
-                            <th>성명</th>
-                            <td><input type="text" name="emp_name" id=""></td>
-                            <th>영문성명</th>
-                            <td><input type="date" name="emp_ename" id=""></td>
+                            <th>재직상태</th>
+                            <td><input type="text" name="" id=""></td>
+                            <th>퇴사일자</th>
+                            <td><input type="text" name="" id=""></td>
                         </tr>
 
                     </table>
