--- a/project_team/board_mngEmp_list.html
+++ b/project_team/board_mngEmp_list.html
@@ -739,7 +739,7 @@
 
         $(function () {
             // 모달창 나타나기 & 사라지기
-            $(".mod").click(function () {
+            $(".empNumber").click(function () {
                 $("#layer").fadeIn(300, function () {
                     $(".pop").fadeIn(200);
                 });
