사원정보 버튼 수정

--- a/project_team/admin_mngEmp_list.html
+++ b/project_team/admin_mngEmp_list.html
@@ -387,7 +387,7 @@
             text-align: center;
         }
 
-        .buttons input {
+        .buttons input, .buttons a {
             border: none;
             padding: 7px 15px;
             border-radius: 3px 3px 3px 3px;
@@ -397,7 +397,7 @@
             cursor: pointer;
         }
 
-        .buttons input[type=button] {
+        .buttons a {
             background-color: #0382c2;
         }
 
@@ -706,7 +706,7 @@
                     
                 </table>
                 <div class="buttons">
-                    <input type="button" value="정보수정" onclick="location.href='board_mngEmp_detail.html'">
+                    <a href='board_mngEmp_detail.html'>정보수정</a>
                     <input type="reset" class="closePop" value="취소">
                 </div>
             </form>
