--- a/project_team/admin_mngEmp_detail.html
+++ b/project_team/admin_mngEmp_detail.html
@@ -378,6 +378,8 @@
             width: 100%;
             height: 200px;
             margin-bottom: 30px;
+            padding: 10px;
+            font-family: 'Noto Sans KR', sans-serif;
         }
 
         .buttons {
@@ -477,8 +479,8 @@
                         <li>
                             <a href="#" class="clickBtn">인사관리<i class="fas fa-angle-down"></i></a>
                             <ul class="submenu">
-                                <li><a href="#" class="clickMenu"><i class="fas fa-angle-right"></i> 사원목록</a></li>
-                                <li><a href="#"><i class="fas fa-angle-right"></i> 입사처리</a></li>
+                                <li><a href="#"><i class="fas fa-angle-right"></i> 사원목록</a></li>
+                                <li><a href="#" class="clickMenu"><i class="fas fa-angle-right"></i> 입사처리</a></li>
                             </ul>
                         </li>
                         <li><a href="#">회사정보관리</a></li>
