일정관리 ui 일부 수정

--- a/project_team/schedule.html
+++ b/project_team/schedule.html
@@ -45,6 +45,7 @@
         width: 1920px;
         height: 100%;
         background-color: #f4f7f7;
+        overflow-x: hidden;
     }
 
     ul li {
@@ -239,7 +240,7 @@
         border: 1px solid #ccc;
         border-collapse: collapse;
         color: #333;
-        font-size: 12px;
+        font-size: 14px;
         text-align: center;
         background-color: white;
         table-layout: fixed;
@@ -263,24 +264,11 @@
         height: 32px;
         border-bottom: 1px solid #ccc;
     }
-
-    .scheduleTable a.empNumber {
-        width: 100%;
-        color: #333;
-        display: inline-block;
-        cursor: pointer;
-    }
-
-    a.empNumber:hover {
-        text-decoration: underline;
-    }
-
-    .scheduleTable td select {
+    .scheduleTable input {
         width: 100%;
         height: 100%;
         border: none;
-        text-align: center;
-        font-size: 12px;
+        padding: 5px;
     }
 
     .buttons {
