--- a/project_team/home.html
+++ b/project_team/home.html
@@ -31,6 +31,7 @@
         height: 100%;
     }
     a {
+        font-family: 'Noto Sans KR', sans-serif;
         text-decoration: none;
         color: #333;
     }
@@ -98,7 +99,7 @@
     }
     .sec-main article.bg-img {
         width: 100%;
-        height: 500px;
+        height: 400px;
         margin-top: 165px;
         background-image: url("sec-title.jpg");
         background-size: cover;
@@ -157,6 +158,68 @@
         font-size: 16px;
         color: #999999;
     }
+    /* 섹션 - 사진 및 설명 */
+    section.sec-imgs {
+        height: 800px;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        color: #333;
+    }
+    .sec-imgs article {
+        width: 50%;
+    }
+    div.imgs-img {
+        width: 100%;
+        height: 300px;
+    }
+    .imgs-img img {
+        width: 100%;
+    }
+    div.imgs-contents {
+        padding: 50px;
+    }
+    .imgs-contents h3 {
+        font-size: 40px;
+        margin-bottom: 23px;
+    }
+    .imgs-contents p {
+        font-size: 16px;
+        color: #999999;
+        line-height: 30px;
+        word-spacing: 5px;
+        margin-bottom: 15px;
+    }
+    .imgs-contents a {
+        font-size: 16px;
+        word-spacing: 5px;
+        color: #2870ab;
+    }
+    /* 섹션 - 회사정보 */
+    section.sec-info {
+        margin-top: 40px;
+    }
+    ul.info-ul {
+        padding: 15px 0;
+        display: flex;
+        justify-content: space-evenly;
+        border-top: 1px solid #99999985;
+    }
+    .info-ul li a {
+        font-size: 16px;
+        font-weight: 600;
+        color: #838383;
+    }
+    .info-ul li i {
+        font-size: 23px;
+    }
+    /* 푸터 - 주소 및 저작권 */
+    footer {
+        color: #999999;
+        font-size: 14px;
+        text-align: center;
+        padding: 15px 0;
+    }
 </style>
 <body>
     <div id="wrap">
@@ -194,7 +257,7 @@
                         <img src="sec-icons1.png" alt="">
                     </div>
                     <p>Business<br>With PluckIT</p>
-                    <p>발전을 지향하는 기업을<br>함께 만드는 PluckIT</p>
+                    <p>지속가능한 가치를<br>함께 만드는 PluckIT</p>
                 </div>
             </article>
             <article>
@@ -203,7 +266,7 @@
                         <img src="sec-icons2.png" alt="">
                     </div>
                     <p>Society<br>With PluckIT</p>
-                    <p>환경을 우선시하는 사회를<br>함께 만드는 PluckIT</p>
+                    <p>사회에 공헌하는 인재를<br>함께 만드는 PluckIT</p>
                 </div>
             </article>
             <article>
@@ -217,17 +280,59 @@
             </article>
         </section>
         <section class="sec-imgs">
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
+            <article>
+                <div class="imgs-img">
+                    <img src="sec-imgs1.jpg" alt="">
+                </div>
+            </article>
+            <article>
+                <div class="imgs-contents">
+                    <h3>고객 맞춤 서비스</h3>
+                    <p>
+                        다양한 시장 경험을 토대로 고객고유의 환경에 대한<br>
+                        단 하나의 카운셀링 서비스를 제공합니다.<br>
+                        PluckIT의 궁극적인 목적은 원활한 서비스의 유지입니다.<br>
+                        진단부터 장애대응, 운영/관리까지<br>
+                        PluckIT이 One-Stop으로 케어합니다.
+                    </p>
+                    <a href="#">더 알아보기</a>
+                </div>
+            </article>
+            <article>
+                <div class="imgs-contents">
+                    <h3>사람과 환경</h3>
+                    <p>
+                        PluckIT은 환경과 사람을 생각하는 기술로<br>
+                        끊임없는 기술개발을 통해 안전하고 깨끗한 환경을 만듭니다.<br>
+                        고객님들의 환경이 곧 건강이라는 생각으로<br>
+                        차근차근 세상을 바꿔갑니다.
+                    </p>
+                    <a href="#">더 알아보기</a>
+                </div>
+            </article>
+            <article>
+                <div class="imgs-img">
+                    <img src="sec-imgs2.jpg" alt="">
+                </div>
+            </article>
         </section>
         <section class="sec-info">
-            <article></article>
-            <article></article>
-            <article></article>
+            <ul class="info-ul">
+                <li><a href="#">회사소개</a></li>
+                <li><a href="#">오시는길</a></li>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li>
+                    <a href="#"><i class="fab fa-instagram"></i></a>&nbsp;&nbsp;
+                    <a href="#"><i class="fab fa-twitter-square"></i></a>&nbsp;&nbsp;
+                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                </li>
+            </ul>
         </section>
-        <footer></footer>
+        <footer>
+            <p>(주)PluckIT 부산광역시 부산진구 중앙대로 749 스카이빌딩 4층 (45050) Tel.051-912-1000</p>
+            <p><i class="far fa-copyright"></i> 2021 All rights reserverd.</p>
+        </footer>
     </div>
 </body>
 </html>
